--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -17,11 +17,20 @@
 }
 
 
+// @font-face {
+//     font-family: 'Roboto';
+//     font-display: swap;
+//     src: local('Roboto-Bold'),
+//         url('/fonts/Roboto-Bold.woff') format('woff');
+//     font-weight: 700;
+//     font-style: normal;
+// }
+
 @font-face {
     font-family: 'Roboto';
     font-display: swap;
-    src: local('Roboto-Bold'),
-        url('/fonts/Roboto-Bold.woff') format('woff');
+    src: local('Roboto-Medium'),
+        url('/fonts/Roboto-Medium.woff') format('woff');
     font-weight: 700;
     font-style: normal;
 }
