--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,6 +14,7 @@
 @import '../sass/blocks/header';
 @import '../sass/blocks/buttons';
 @import '../sass/blocks/advantages';
+@import '../sass/blocks/job';
 
 
 
