--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,11 +11,17 @@
 
 @import '../sass/base/variables';
 
+
 @import '../sass/blocks/header';
 @import '../sass/blocks/buttons';
+@import '../sass/blocks/forms';
+@import '../sass/blocks/subtitle-block';
 @import '../sass/blocks/advantages';
 @import '../sass/blocks/job';
-
+@import '../sass/blocks/promo';
+@import '../sass/blocks/cost';
+@import '../sass/blocks/consultation';
+@import '../sass/blocks/schema';
 
 
 
