--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,13 +1,3 @@
-.subtitle {
-    color: $third-color;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 26px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 0;
-}
-
 
 .advantages {
     height: 590px;
@@ -16,10 +6,11 @@
     &__list {
         display: flex;
         flex-flow: column wrap;
+        justify-content: center;
         height: 500px;
         max-width: 1140px;
         &_item {
-            margin-top: 31px;
+            margin-top: 25px;
             margin-bottom: 4px;
             display: flex;
             width: 526px;
