--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,10 +1,15 @@
 .button {
+    display: block;
     border: none;
     border-radius: 40px;
     background-color: $main-color;
     color: $second-color;
     text-transform: uppercase;
     text-align: center;
+    font-size: 12px;
+    font-weight: 400;
+    width: 160px;
+    height: 45px;
     &:focus {
         outline: none;
         color: #fff;
@@ -12,16 +17,21 @@
     &:hover {
         color: #fff;
     }
-    &_call {
-        font-size: 12px;
-        font-weight: 400;
-        width: 160px;
-        height: 45px;
-    }
     &_calc {
         width: 230px;
         height: 57px;
         font-size: 15px;
         font-weight: 700;
+    }
+    &_cost {
+        margin: 0 auto;
+        margin-top: 21px;
+    }
+    &_border {
+        width: 188px;
+        height: 73px;
+        border: 14px solid;
+        border-color:#fff;
+        margin: 10px auto 0;
     }
 }
