--- a/src/sass/blocks/_job.scss
+++ b/src/sass/blocks/_job.scss
@@ -1,30 +1,16 @@
 .job {
-    height: 619px;
+    .container {
+        max-width: 1250px;
+    }
+    min-height: 619px;
     padding: 51px 0 57px;
-    &__line {
-        display: block;
-        margin: 0 auto;
-        margin-top: 20px;
-        width: 148px;
-        background-color: $main-color;
-        height: 1px;
-        border: none;
-    }
-    &__descr {
-        margin-top: 17px;
-        font-size: 21px;
-        font-weight: 300;
-        line-height: 24px;
-        text-align: center;
-    }
     &__promo {
-        margin-top: 37px;
-        width: 360px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        flex-wrap: wrap;
         &_item {
-            width: 360px;
-            margin: 0 15px;
+            margin: 37px 15px 0;
+            max-width: 360px;
             &-img {
                 width: 360px;
                 height: 210px;
