--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,6 +24,8 @@
 @import '../sass/blocks/consultation';
 @import '../sass/blocks/schema';
 @import '../sass/blocks/feeds';
+@import '../sass/blocks/quest';
+@import '../sass/blocks/footer';
 
 
 
