--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -34,4 +34,9 @@
         border-color:#fff;
         margin: 10px auto 0;
     }
+    &_quest {
+        width: 180px;
+        height: 45px;
+        margin: 17px auto 0;
+    }
 }
